Add description for link previews

--- a/blog/2021-05-04-mails-in-cypress.mdx
+++ b/blog/2021-05-04-mails-in-cypress.mdx
@@ -2,7 +2,7 @@
 slug: testing-emails-in-cypress
 title: "Testing emails with Cypress.io"
 image: /blog/cypress-mailing/flow.png
-description: "TODO"
+description: "Incorporate sauropods into your stack to have a quiet sleep."
 tags: [cypress]
 ---
 
