add link to original article on medium

--- a/blog/2021-05-04-mails-in-cypress.mdx
+++ b/blog/2021-05-04-mails-in-cypress.mdx
@@ -24,6 +24,12 @@ After quick brainstorming, we came up with the following plan:
 
 ![Email flow](/blog/cypress-mailing/flow.png)
 
+:::note
+
+This article is an expansion of [Testing HTML emails feat. Cypress.io and Mailosaur.com](https://medium.com/@skarbala.martin/5a3394ecbbdd). As I talked and coded here quite a lot, as usual, check it out if you want a more user-friendly variant.
+
+:::
+
 ## Preconditions
 
 To not end up with flaky tests, we must assure the system's high predictability, and reliance on an email message being transmitted over the network will always pose some risk to automation.
